# AgeOfWar

./: .gitignore  AgeOfWar  CMakeLists.txt  Makefile  README.md
src/: AIPlayer.cpp  AIPlayer.hpp  Archer.cpp  Archer.hpp  AreaOfEffect.cpp  AreaOfEffect.hpp  Base.cpp  Base.hpp  Catapult.cpp  Catapult.hpp  Entity.cpp  Entity.hpp  Entity.inl  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Player.inl  Playground.cpp  Playground.hpp  Range.cpp  Range.hpp  RecruitableUnit.cpp  RecruitableUnit.hpp  Serializable.hpp  Soldier.cpp  Soldier.hpp  SuperSoldier.cpp  SuperSoldier.hpp  Unit.cpp  Unit.hpp  Unit.inl  main.cpp
src/utils/: ANSIColors.cpp  ANSIColors.hpp  bitstream.cpp  bitstream.hpp
